2005-04-25  David Hyatt  <hyatt@apple.com>

	Fix for 4097842, changing 1st line of a url that wraps doesn't update the second line.  Make sure to
	update line break info for the last dirty line so that when a clean line tries to figure out where it
	started, it will get an accurate position taking into account the updated string.  By doing this, the code
	will be able to properly distinguish between the old and new positions and not accidentally assume they are
	the same.
	
        Reviewed by darin

        * khtml/rendering/render_text.cpp:
        (RenderText::setTextWithOffset):

2005-04-26  Darin Adler  <darin@apple.com>

        Reviewed by Maciej.

        - fixed <rdar://problem/4098826> Bezier curves broken in new Safari canvas object (last two parameters parsed incorrectly)

        * khtml/ecma/kjs_html.cpp: (KJS::Context2DFunction::tryCall): Fixed incorrect argument indices.
        Thanks to Brian Campbell who figured out what was wrong.

2005-04-17  Maciej Stachowiak  <mjs@apple.com>

        Reviewed by Darin.

	- use single-threaded malloc in places where malloc is hot for an
	8% speed improvement on cvs-base

        * ForwardingHeaders/misc/fast_malloc.h: Added.
        * WebCore.pbproj/project.pbxproj:
        * khtml/css/css_base.h:
        * khtml/css/css_ruleimpl.h:
        * khtml/css/css_valueimpl.h:
        * khtml/css/cssstyleselector.h:
        * khtml/misc/arena.cpp:
        (ArenaAllocate):
        (FreeArenaList):
        (ArenaFinish):
        * khtml/misc/main_thread_malloc.cpp: Added.
        * khtml/misc/main_thread_malloc.h: Added.
        * khtml/rendering/render_style.h:
        * khtml/xml/dom2_eventsimpl.h:
        * khtml/xml/dom2_rangeimpl.h:
        * khtml/xml/dom2_traversalimpl.h:
        * khtml/xml/dom2_viewsimpl.h:
        * khtml/xml/dom_docimpl.h:
        * khtml/xml/dom_elementimpl.cpp:
        (NamedAttrMapImpl::NamedAttrMapImpl):
        (NamedAttrMapImpl::clearAttributes):
        (NamedAttrMapImpl::operator=):